welcome.lessons.welcome.array.island.Island.scala.error
island:10: error: value h is not a member of Unit
        println h
                ^